angle of rotations

--- a/index.html
+++ b/index.html
@@ -4,15 +4,22 @@
   <meta charset="UTF-8">
   <title>Wheel Of Fortune</title>
   <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
   <h1>Wheel Of Fortune</h1>
-
+  <div id="print-number"></div>
+  
+  <canvas id="canvaspointer" width="600" height="26"></canvas>
   <canvas id="canvas" width="600" height="600"></canvas>
 
 
+  <div><button id="spin-wheel">SPIN WHEEL</button><div>
+    <br>
+  <div><button id="check-wheel">CHECK WHEEL</button><div>
   <script src="js/jquery-3.2.1.js"></script>
   <script src="js/underscore-min.js"></script>
+
   <script src="js/main.js"></script>
 
 </body>
